﻿The QA40xPlot Changelog
--------------------------------------------
This changelog shows the changes made and then released via github
--------------------------------------------
v 1.1.18
- fix left/right swap of noise floor
- repair up-down control positioning on-screen

v 1.1.17
- add unit conversion to voltage inputs (not serialized yet)
v 1.1.16
- fix the impedance cursor phase math
- swap to not using deploy suffix but set all git to binary
v 1.1.15
- enable saving loaded tests
- add plot colors to the Get settings
- enable color selection via a color picker dialog
- refactor out otherset class
- add this file (Changelog.txt) to the distribution and link to it
- create a ClickOnce installation and use github.io for it
v 1.1.14
- repair right channel math error
- swap up/down buttons on updown control
- repair Spectrum signal expander binding
v 1.1.13
- add inductor/capacitor cursor for impedance test
- add ability to select a theme
- swapped out updown for a usercontrol
- alphabetize settings
- add expanders to the UI portion of the screen
- move miniplots to a separate window
- swap input channels if QA402
v 1.1.12
- increase max # of averages to 20
- add 88,16K fft sizes
- swap amp load resistance to correct ZReference on impedance test
- do averaging in the frequency domain
- improve translucency in plot lines
- add graph background color selection
v 1.1.11
- fix load of a saved tab half-erasing the get list
- swap to more standard colors for the get list
v 1.1.10
- repair IMD signal to noise math when a frequency is near 20KHz
- repair tab save never highlights in THD vs amp and THD vs frequency
- repair unit name in THD vs amp Y axis
- start capturing on perceived data start rather than immediately
- remove double-scan for gain tests and instead correctly
  allow time for circuit to settle after relays switch
  based on empirical test of relay vs signal
v 1.1.9
- refine the esthetics, like boundary of graph
- support settable background color