@@ -13,13 +13,19 @@
                 <Label Content="Color" />
                 <ComboBox IsEditable="True" MinWidth="80" 
                   Text="{Binding NowColor, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=local:ColorPicker}}" 
-                  ItemsSource="{Binding PlotColors, RelativeSource={RelativeSource AncestorType=local:ColorPicker}}" />
-                <Label Content="Clear" />
-                <Slider x:Name="MySlider" VerticalAlignment="Center" ValueChanged="OnChange" Minimum="0" Maximum="100" Width="120" />
-                <Label Content="Solid" />
-                <Label x:Name="ShowOpaque"/>
+                  ItemsSource="{Binding PlotColors, RelativeSource={RelativeSource AncestorType=local:ColorPicker}}"
+                   />
+                <Label Content="Clear" VerticalContentAlignment="Center" />
+                <Slider x:Name="MySlider" VerticalAlignment="Center" 
+                        ValueChanged="OnSliderChange" Minimum="0" Maximum="100" Width="120" />
+                <Label Content="Solid  "  VerticalContentAlignment="Center" />
+                <Label x:Name="ShowOpaque" VerticalContentAlignment="Center" />
                 <Label Content="         " />
-                <Button Content="  OK  " Click="DoOk" ToolTip="OK" IsDefault="True"  Background="{Binding NowColor, RelativeSource={RelativeSource AncestorType=local:ColorPicker}}" Margin="5,0,0,0" Width="40" />
+                <Button Content="OK" Click="DoOk" ToolTip="OK" IsDefault="True"  
+                        Background="{Binding NowColor, RelativeSource={RelativeSource AncestorType=local:ColorPicker}}" 
+                        HorizontalContentAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        Margin="5,0,0,0" Width="40" />
                 <Label Content="    " />
                 <Button Content="Cancel" Click="DoCancel" IsCancel="True"/>
             </StackPanel>
